--- a/css/doctor_styles/doctor-default.scss
+++ b/css/doctor_styles/doctor-default.scss
@@ -21,9 +21,8 @@
 
 .header {
     background-color: $main_color;
-    position: fixed;
-    width: 50%;
-
+    position: sticky;
+    
     img {
         width: 7%;
         padding: 1px 0px 1px 5px;
@@ -33,8 +32,8 @@
 .footer {
     color: $inactive_color;
     background-color: #F0F3F8;
+    
     width: 50%;
-
     position: fixed;
     bottom: 0;
 
@@ -44,9 +43,6 @@
         text-align: center;
         li {
             padding-top: 1%;
-            p {
-                font-family: Inter-Bold;
-            }
 
             img {
                 width: 7%;
