--- a/css/doctor_styles/doctor-prescribe.scss
+++ b/css/doctor_styles/doctor-prescribe.scss
@@ -1,39 +1,27 @@
 @import "./doctor-default";
 
+.content {
+    text-align: center;
+    padding-top: 2%;
 
-.main {
-    @include center();
-    margin-top: 7%;
-
-    #square {
-        @include center();
-        background-color: $outline_color;
-        padding: 25% 10% 25% 10%;
-        border-radius: 20px;
-    }
-
-    p {
-        margin-top: 1.5%;
+    img {
+        width: 50%;
     }
 
     form {
-        margin-top: 3%;
+        padding-top: 2%;
+
         input[type=text] {
             width: 50%;
             background-color: $inactive_color_2;
-            border-color: 1px solid $outline_color;
+            border: 1px solid $outline_color;
             border-radius: 5px;
         }
         input[type=button] {
             @include big-button();
+
             width: 10%;
-            
         }
     }
 }
 
-.footer {
-    .prescriptions {
-        @include footer-blue();
-    }
-}
